[package]
name = "rustorithms"
version = "0.1.0"
authors = ["jinlow <james.d.inlow@gmail.com>"]
edition = "2018"

[workspace]
members=["algorithm_crates/*/"]
exclude=["pyorithms"]

[dependencies]
binary_search = {version= "0.1.0", path="algorithm_crates/binary_search"}
hashtable = {version="0.1.0", path="algorithm_crates/hashtable"}
linked_list = {version="0.1.0", path="algorithm_crates/linked_list"}
quicksort = {version="0.1.0", path="algorithm_crates/quicksort"}
selection_sort = {version="0.1.0", path="algorithm_crates/selection_sort"}
