[package]
name = "pyorithms"
version = "0.1.0"
authors = ["jinlow <james.d.inlow@gmail.com>"]
edition = "2018"

[lib]
name = "pyorithms"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use pyorithms;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.1"
features = ["extension-module"]

[dependencies]
rustorithms = {version="0.1.0", path="../"}
